--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -1,66 +1,104 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:background="@color/black_shade1"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
     <!--image view for displaying our image-->
     <ImageView
         android:id="@+id/image"
-        android:layout_width="match_parent"
-        android:background="@drawable/ic_android_black_24dp"
-        android:layout_height="300dp"
+        android:layout_width="241dp"
+        android:layout_height="217dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="80dp"
+        android:background="@drawable/camera512"
+
+
         android:scaleType="centerCrop" />
+
+    <!--recycler view for displaying the list of result-->
+
+    <TextView
+        android:id="@+id/textviewp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/image"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginBottom="30dp"
+        android:gravity="center"
+        android:padding="4dp"
+        android:text="Your Image will appear here"
+        android:textAlignment="center"
+        android:textColor="@color/yellow"
+        android:textSize="18sp"
+        android:textStyle="bold" />
 
     <LinearLayout
         android:id="@+id/idLLButtons"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/image"
-        android:orientation="horizontal">
+
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="78dp"
+        android:layout_marginEnd="5dp"
+        android:layout_marginBottom="5dp"
+        android:orientation="vertical">
 
         <!--button for capturing our image-->
         <Button
             android:id="@+id/snapbtn"
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_margin="5dp"
-            android:layout_marginTop="30dp"
+           android:background="@drawable/rounded_corner"
+            android:layout_marginStart="5dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginEnd="5dp"
+            android:layout_marginBottom="5dp"
             android:layout_weight="1"
             android:lines="2"
             android:text="Snap"
             android:textAllCaps="false"
-            android:textSize="18sp"
+           app:backgroundTint="@color/yellow"
+            android:textSize="20dp"
             android:textStyle="bold" />
 
         <!--button for detecting the objects-->
         <Button
             android:id="@+id/idBtnSearchResuts"
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_margin="5dp"
-            android:layout_marginTop="30dp"
+            android:layout_marginStart="5dp"
+            android:background="@drawable/rounded_corner"
+            app:backgroundTint="@color/yellow"
+
+            android:layout_marginTop="5dp"
+            android:layout_marginEnd="5dp"
+            android:layout_marginBottom="5dp"
             android:layout_weight="1"
+            android:layout_marginVertical="30dp"
             android:lines="2"
             android:text="Get Search Ressults"
             android:textAllCaps="false"
-            android:textSize="18sp"
+            android:textSize="20dp"
             android:textStyle="bold" />
 
     </LinearLayout>
 
-    <!--recycler view for displaying the list of result-->
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/idRVSearchResults"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/idLLButtons" />
+        android:layout_below="@id/idLLButtons"
+        android:layout_marginTop="8dp" />
 
 </RelativeLayout>
