--- a/app/src/main/res/layout/fragment_fav.xml
+++ b/app/src/main/res/layout/fragment_fav.xml
@@ -13,8 +13,8 @@
         android:layout_height="wrap_content"
         android:text="Language Translator"
         android:textAlignment="center"
-        android:layout_marginTop="20dp"
-        android:textSize="30sp"
+        android:layout_marginTop="30dp"
+        android:textSize="35sp"
         android:textColor="@color/yellow"
         android:layout_gravity="center"
         android:textStyle="bold"
@@ -27,7 +27,7 @@
         android:weightSum="3"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="40dp"
         >
 
         <Spinner
@@ -128,6 +128,7 @@
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
         android:layout_marginTop="30dp"
+        android:background="@drawable/rounded_corner"
         android:text="Translate"
         android:textAllCaps="false"
         android:id="@+id/idBtnTranslate"
