--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -8,14 +8,26 @@
     android:layout_height="match_parent"
     tools:context=".SearchFragment">
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Object Identifier"
+        android:textAlignment="center"
+        android:layout_marginTop="30dp"
+        android:textSize="35sp"
+        android:textColor="@color/yellow"
+        android:layout_gravity="center"
+        android:textStyle="bold"
+        android:paddingHorizontal="4dp"/>
+
     <!--image view for displaying our image-->
     <ImageView
         android:id="@+id/image"
-        android:layout_width="241dp"
-        android:layout_height="217dp"
+        android:layout_width="250dp"
+        android:layout_height="250dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="80dp"
+        android:layout_marginTop="100dp"
         android:src="@drawable/camera512" 
 
 
@@ -29,7 +41,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/image"
         android:layout_marginStart="20dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="30dp"
         android:layout_marginEnd="20dp"
         android:layout_marginBottom="30dp"
         android:gravity="center"
@@ -37,7 +49,7 @@
         android:text="Your Image will appear here"
         android:textAlignment="center"
         android:textColor="@color/yellow"
-        android:textSize="18sp"
+        android:textSize="20sp"
         android:textStyle="bold" />
 
     <LinearLayout
@@ -57,40 +69,27 @@
             android:id="@+id/snapbtn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
+            android:layout_marginStart="50dp"
+            android:layout_marginTop="30dp"
+            android:layout_marginEnd="50dp"
             android:background="@drawable/rounded_corner"
-            android:layout_marginStart="45dp"
-            android:layout_marginTop="5dp"
-            android:layout_marginEnd="45dp"
-            android:layout_marginBottom="5dp"
-            android:layout_weight="1"
-            android:lines="2"
             android:text="Snap"
             android:textAllCaps="false"
-            app:backgroundTint="@color/yellow"
-            android:textSize="20dp"
-            android:textStyle="bold" />
+            android:textSize="20dp"/>
 
         <!--button for detecting the objects-->
         <Button
             android:id="@+id/idBtnSearchResuts"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginStart="45dp"
-            android:background="@drawable/rounded_corner"
-            app:backgroundTint="@color/yellow"
 
-            android:layout_marginTop="5dp"
-            android:layout_marginEnd="45dp"
-            android:layout_marginBottom="5dp"
-            android:layout_weight="1"
-            android:layout_marginVertical="30dp"
-            android:lines="2"
-            android:text="Get Search Ressults"
+            android:layout_marginStart="50dp"
+            android:layout_marginTop="30dp"
+            android:layout_marginEnd="50dp"
+            android:background="@drawable/rounded_corner"
+            android:text="Get Search Results"
             android:textAllCaps="false"
-            android:textSize="20dp"
-            android:textStyle="bold" />
+            android:textSize="20dp"/>
 
     </LinearLayout>
 
