--- a/app/src/main/res/layout/fragment_fav.xml
+++ b/app/src/main/res/layout/fragment_fav.xml
@@ -27,8 +27,7 @@
         android:weightSum="3"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
-        android:layout_marginTop="40dp"
-        >
+        android:layout_marginTop="40dp">
 
         <Spinner
             android:layout_width="0dp"
@@ -39,7 +38,6 @@
             android:padding="3dp"
             android:gravity="center"
             />
-
         <ImageView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -48,7 +46,6 @@
             app:tint="@color/white"
             android:layout_gravity="center"
             />
-
         <Spinner
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -58,7 +55,6 @@
             android:padding="3dp"
             android:gravity="center"
             />
-
     </LinearLayout>
 
     <com.google.android.material.textfield.TextInputLayout
@@ -71,9 +67,7 @@
         android:hint="Source Text"
         android:padding="5dp"
         android:textColorHint="@color/white"
-        app:hintTextColor="@color/white"
-        >
-
+        app:hintTextColor="@color/white">
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/idEdtSource"
             android:layout_width="match_parent"
@@ -83,9 +77,7 @@
             android:inputType="textImeMultiLine|textMultiLine"
             android:textColor="@color/white"
             android:textColorHint="@color/white"
-            android:textSize="14dp"
-            />
-
+            android:textSize="20dp" />
     </com.google.android.material.textfield.TextInputLayout>
 
 
@@ -97,9 +89,7 @@
         android:textSize="20sp"
         android:textAlignment="center"
         android:layout_gravity="center"
-        android:layout_marginTop="20dp"
-        />
-
+        android:layout_marginTop="20dp" />
 
     <ImageView
         android:layout_width="70dp"
@@ -108,9 +98,7 @@
         android:layout_marginTop="20dp"
         android:src="@drawable/ic_mic"
         app:tint="@color/yellow"
-        android:id="@+id/idIVMic"
-        />
-
+        android:id="@+id/idIVMic" />
 
     <TextView
         android:layout_width="match_parent"
@@ -119,8 +107,7 @@
         android:textAlignment="center"
         android:textColor="@color/white"
         android:textSize="15sp"
-        android:layout_gravity="center"
-        />
+        android:layout_gravity="center" />
 
     <com.google.android.material.button.MaterialButton
         android:layout_width="match_parent"
@@ -130,10 +117,9 @@
         android:layout_marginTop="30dp"
         android:background="@drawable/rounded_corner"
         android:text="Translate"
+        android:textSize="20dp"
         android:textAllCaps="false"
-        android:id="@+id/idBtnTranslate"
-        />
-
+        android:id="@+id/idBtnTranslate" />
 
     <TextView
         android:layout_width="match_parent"
@@ -145,8 +131,5 @@
         android:layout_gravity="center"
         android:layout_marginTop="30dp"
         android:textColor="@color/yellow"
-        android:textSize="25sp"
-        />
-
-
+        android:textSize="25sp" />
 </LinearLayout>
