--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -41,8 +41,7 @@
         android:id="@+id/idTVDetectedText"
         android:textSize="20sp"
         android:textStyle="bold"
-        android:padding="4dp"
-        />
+        android:padding="4dp" />
 
     <Button
         android:id="@+id/idbtnSnap"
@@ -56,7 +55,6 @@
         android:text="Snap"
         android:textAllCaps="false"
         android:textSize="20dp"/>
-<!--        app:backgroundTint="@color/yellow" -->
 
     <Button
         android:id="@+id/idbtnDetect"
@@ -70,7 +68,4 @@
         android:layout_marginTop="30dp"
         android:textAllCaps="false"
         android:background="@drawable/rounded_corner"/>
-<!--        app:backgroundTint="@color/yellow"-->
-
-
 </RelativeLayout>
