--- a/app/src/main/res/layout/spinner_item.xml
+++ b/app/src/main/res/layout/spinner_item.xml
@@ -5,7 +5,5 @@
     android:gravity="center"
     android:textAlignment="center"
     android:padding="4dp"
-    android:textColor="@color/white"
-    >
-
+    android:textColor="@color/white">
 </TextView>
