--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -61,6 +61,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/rounded_corner"
+            android:layout_marginEnd="20dp"
             android:text="Snap"
             android:textAllCaps="false"
             android:textSize="20dp"/>
